Fri Nov 20 14:10:15 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Get_Connection_Test/descriptors/Plan.cdp:
          Resolved errors when running this deployment plan.

Fri Nov 20 14:05:21 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Get_Connection_Test/Base/Get_Connection_Test_Base.idl:
        * connectors/dds4ccm/tests/Get_Connection_Test/Connector/Get_Connection_Test_Connector.mpc:
        * connectors/dds4ccm/tests/Get_Connection_Test/Connector/Get_Connection_Test_Connector_exec.h:
        * connectors/dds4ccm/tests/Get_Connection_Test/Connector/Get_Connection_Test_Connector_exec.cpp:
        * connectors/dds4ccm/tests/Get_Connection_Test/Receiver/Get_Connection_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/Get_Connection_Test/Sender/Get_Connection_Test_Sender_exec.h:
          Resolved some inconsistencies in naming items.

Fri Nov 20 13:44:24 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Enabled some tests that now should run

Fri Nov 20 13:34:35 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Added dds4ccm writer test.

Fri Nov 20 13:21:38 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedSamples/Sender/Unkeyed_Test_Sender_exec.cpp:
          Resolved minor typos.

        * connectors/dds4ccm/tests/Writer:
        * connectors/dds4ccm/tests/Writer/Base:
        * connectors/dds4ccm/tests/Writer/Base/Writer_Base.idl:
        * connectors/dds4ccm/tests/Writer/Base/Writer_Base.mpc:
        * connectors/dds4ccm/tests/Writer/Connector:
        * connectors/dds4ccm/tests/Writer/Connector/Writer_Connector.idl:
        * connectors/dds4ccm/tests/Writer/Connector/Writer_Connector.mpc:
        * connectors/dds4ccm/tests/Writer/Connector/Writer_Connector_exec.h:
        * connectors/dds4ccm/tests/Writer/Connector/Writer_Connector_exec.cpp: