@@ -1,3 +1,11 @@
+Fri Nov 20 14:48:24 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/ComponentServer/CIAO_ComponentServer.h:
+          Deleted, not used anymore
+
+        * ciao/ComponentServer/CIAO_ComponentServer_Task.cpp:
+          Updated include
+
 Fri Nov 20 14:10:15 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/Get_Connection_Test/descriptors/Plan.cdp:
